@@ -1,0 +1,5 @@
+*.[oda]
+*.gch
+/.pc
+/bin
+/check/my_86_filter/my_86_filter
