@@ -2,7 +2,7 @@ Source: p7zip
 Section: utils
 Priority: optional
 Maintainer: Robert Luberda <robert@debian.org>
-Build-Depends: debhelper (>= 7), dpkg-dev (>= 1.16.0)
+Build-Depends: debhelper (>= 9)
 Standards-Version: 3.9.2
 Homepage: http://p7zip.sourceforge.net/
 
