@@ -1,2 +1,0 @@
-usr/bin
-usr/lib/p7zip
