@@ -1,2 +1,0 @@
-usr/share/doc/p7zip-full/ChangeLog.gz usr/share/doc/p7zip-full/changelog.gz
-
