@@ -1,4 +1,3 @@
-ChangeLog
 README
 TODO
 DOCS/
