@@ -1,2 +1,0 @@
-usr/share/doc/p7zip/ChangeLog.gz usr/share/doc/p7zip/changelog.gz
-
